[package]
name = "xor-image-handler"
version = "0.1.0"
authors = ["XOR·APPS <developers@xorapps.cloud>"]
edition = "2021"
description = "A library to handle reading images and generating their MIME and encoding to various encoding schemes like Base64 and Z85"
keywords = ["XOR·APPS"]
categories = []
documentation = "https://docs.rs/xor-image-handler"
repository = "https://github.com/xorapps/xor-image-handler.git"
homepage = "https://xorapps.cloud/libraries/xor-image-handler"
readme = "README.md"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = { version = "1.6.0", optional = true }
base64 = { version = "0.21.0", optional = true }
camino = "1.1.3"
futures-lite = { version = "1.12.0" }
hex = { version = "0.4.3", optional = true }
lz4_flex = { version = "0.10.0", optional = true }
z85 = { version = "3.0.5", optional = true }
xor-errors = { git = "https://github.com/xorapps/XOR-Errors.git", default-features = false }
tokio = { version = "1.25.0", features = ["full"], optional = true }


[features]
default = ["full_smol", "hex"]
hex = ["dep:hex"]
base64 = ["dep:base64"]
lz4 = ["dep:lz4_flex"]
full_smol = ["xor-errors/full_smol", "async-fs"]
full_tokio = ["xor-errors/full_tokio", "tokio"]

[dev-dependencies]
smol = "1.3.0"
